# pragmabackend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  StaticHTTPPackets.cpp  StaticWSPackets.cpp  main.cpp  vcpkg.json
.github/workflows/: autoformat.yml  build.yml  release.yml  style.yml
Launcher/: CMakeLists.txt  CarouselBackground.cpp  CarouselBackground.h  playtab.cpp  playtab.h  playtab.ui
Launcher/Implementation/: HomepageWindow.cpp  main.cpp
Launcher/Model/: HomepageWindow.h
Packets/Implementation/: AuthLatch.cpp  AuthenticateHandler.cpp  CreatePartyProcessor.cpp  EnterMatchmakingProcessor.cpp  FetchPlayerLoadoutsProcessor.cpp  GameDataStore.cpp  GetBulkProfileDataProcessor.cpp  GetFriendsListAndRegisterOnlineHandler.cpp  GetLoginDataProcessor.cpp  GetPlayerDataProcessor.cpp  GetUnreadMessagesProcessor.cpp  IsInPartyHandler.cpp  LoginToChatProcessor.cpp  Notification.cpp  PartyDetailsNotification.cpp  PlayerConnectionThread.cpp  ReadMessageProcessor.cpp  RegexPacketProcessorHTTP.cpp  RegexPayloadProcessorWS.cpp  ResourcesUtilities.cpp  SaveOutfitLoadoutProcessor.cpp  SavePlayerDataProcessor.cpp  SaveWeaponLoadoutProcessor.cpp  SetPlayerPresenceHandler.cpp  SetReadyProcessor.cpp  SpectreWebsocket.cpp  SpectreWebsocketRequest.cpp  StaticResponseProcessorHTTP.cpp  StaticResponseProcessorWS.cpp  SteamValidator.cpp  SubmitProviderIdHandler.cpp  UpdateItemV4Processor.cpp  UpdateItemsV0Processor.cpp  UpdatePartyPlayerProcessor.cpp  UpdatePartyProcessor.cpp  VivoxTokenGenerator.cpp
Packets/Model/: AuthLatch.h  AuthenticateHandler.h  CaseHelper.h  CreatePartyProcessor.h  EnterMatchmakingProcessor.h  FetchPlayerLoadoutsProcessor.h  FieldFetchProcessor.h  GameDataStore.h  GetBulkProfileDataProcessor.h  GetFriendsListAndRegisterOnlineHandler.h  GetLoginDataProcessor.h  GetPlayerDataProcessor.h  GetUnreadMessagesProcessor.h  HeartbeatProcessor.h  IsInPartyHandler.h  LoginToChatProcessor.h  Notification.h  PacketProcessor.h  PartyDetailsNotification.h  PlayerConnectionThread.h  ReadMessageProcessor.h  Regex.h  RegexPayloadProcessorHTTP.h  RegexPayloadProcessorWS.h  ResourcesUtilities.h  SaveOutfitLoadoutProcessor.h  SavePlayerDataProcessor.h  SaveWeaponLoadoutProcessor.h  SetPlayerPresenceHandler.h  SetReadyProcessor.h  SpectreRpcType.h  SpectreWebsocket.h  SpectreWebsocketRequest.h  StaticResponseProcessorHTTP.h  StaticResponseProcessorWS.h  SteamValidator.h  SubmitProviderIdHandler.h  UpdateItemV4Processor.h  UpdateItemsV0Processor.h  UpdatePartyPlayerProcessor.h  (+2 more)
Packets/Protoc/: FetchLoadoutsRequest.proto  IsInPartyResponse.proto  SetPresenceRequest.proto
Persistence/Implementation/: Database.cpp  PartyDatabase.cpp  PersistenceUtilities.cpp  PlayerDatabase.cpp  PlayerDatabase_Providers.cpp
Persistence/Model/: Database.h  FieldKey.h  PartyDatabase.h  PersistenceUtilities.h  PlayerDatabase.h
Persistence/Protoc/: Party.proto  PlayerData.proto  PlayerPresence.proto
resources/testrequests/: eb5604fa-9cba-42e5-8023-4587bf4166ee.json  rmduplicates.bat  spectre-oct-1-2024-customgame_fe24fbad-05a6-4704-893a-5f63be09ef17.json  spectre-season-1-2-25-2025-mainmenu-SantaiGG.json  spectre-season-1-2-25-2025-mainmenu-limitedioaccount.json
resources/testrequests/http/: 075347eb-d68b-4458-95c8-ac92fa616506.json  0920332c-0c3b-42db-83c5-eee15c3c442d.json  14da8ec1-02e9-44a0-81c3-7691419b02eb.json  1d218708-87c0-4a94-902c-f6260a000c2b.json  20dda5f4-6fee-43b3-bd92-a29e6ba31028.json  20e1b03c-43f1-476d-9987-3a56d584c8bd.json  2e044419-c85a-4fb2-9e2e-8d61db0a1b66.json  2fd7edc6-bce0-4e8f-8cf2-7819a95639d8.json  343533ad-323d-4ce2-a6b8-152827cdd734.json  42d14f27-5523-48b1-8e97-6ddbde9701b4.json  479e4028-37ad-4c35-a511-f89580c55ecd.json  4e0f61aa-04ca-4122-a645-78f5c0f4117c.json  4ee53d5c-ebc9-4039-9f34-8263fe56e45c.json  5364e003-f913-4835-84e9-1fed00be5049.json  56b72dcd-197a-47db-a176-2b1048a61552.json  591c652e-35c4-4518-882f-c826a29ef6b9.json  5a033e5c-5c78-4f5b-add5-ae7f17741378.json  675d1ff5-b04c-473b-962c-77e21ef6cd9c.json  6df1791b-e680-4e23-8f98-61236e929a8a.json  75537a57-e764-4c33-a49a-dc098403fba7.json  792d9b9d-3de5-4336-9a43-7fe5ee68c8c9.json  7937654e-5792-403d-a8d8-bf205a57538b.json  79d12bf9-1a85-4810-9ff8-6829e56b6982.json  79f519b6-c930-4eb5-8bdb-5aa917378521.json  7c94431f-c302-458b-b940-1f2621e2db68.json  80aefe30-aca0-444a-8a2d-0f5aabd09f08.json  811adad8-5fce-4e97-8298-9c11ca6b7418.json  828c3708-5145-4734-8d7d-61291f0dc351.json  82dee4f2-c005-4265-9006-240427b063ce.json  878145fb-5c9e-419c-a379-62970a5e3da2.json  8e6b13c2-06e2-4db4-8a15-c74d99df0bd0.json  8f813f91-6796-4869-8e55-537599ced370.json  8f988f20-0fa4-4b5d-9220-d0fef9fe4eff.json  95be1e55-13fd-4937-af67-ee16c82d13cd.json  95ed1d46-6dc8-4cad-8559-4b6d2a62930d.json  973a8798-ad2a-4b7c-846b-f75679ec4567.json  9e0d5d0c-045a-49d9-81c5-df0708f85d5e.json  9fe504c9-3fb9-49aa-b86f-3416126db6aa.json  a221d6e5-251f-4cea-9352-d378c0c5f691.json  a70a9197-be9d-40af-a167-833b5305e575.json  (+12 more)
resources/testrequests/ws/: 00262bcb-bcba-4a4b-8fd2-ff1b0424210e.json  01e9ddc3-eb92-4f28-a6c6-13f0988c283e.json  0270a255-379a-4f25-923c-7caee51cb6b4.json  042646d0-9d50-46b7-8a49-8c7c0c5c79ac.json  042fff98-b2a0-4137-89ff-075f0565a8fe.json  045ec1ce-4c83-4ec1-b42f-9c3cab985090.json  059bf1ce-af8d-456f-b07b-caca9341f8e8.json  064d61a9-19f3-483f-bf7e-e5e27236a221.json  07cc6fe0-d836-4828-90ba-d735db5db3ab.json  0ab882e6-adf1-4dc6-9af9-3ca363d1a943.json  0b1e1ce0-63bd-49bd-9ae8-789dca096cdd.json  0bc6931e-4650-4f26-a403-11a4d758d31b.json  (+521 more)
tests/: CMakeLists.txt  ProcessFiddlerLog.cpp  TestDeduplicator.cpp  WSRequestTests.cpp  test_main.cpp
tests/Model/: BackendEnvironment.h  HTTPRequestTest.h  JsonTestUtil.h  RequestTest.h  SequencedRequestTest.h  TestHTTPClient.h  TestWebsocketClient.h  WebsocketRequestTest.h
tests/implementation/: BackendEnvironment.cpp  HTTPRequestTest.cpp  JsonTestUtil.cpp  ProcessFiddlerLog.cpp  RequestTest.cpp  SequencedRequestTest.cpp  TestDeduplicator.cpp  TestHTTPClient.cpp  TestWebsocketClient.cpp  WebsocketRequestTest.cpp  test_main.cpp
(+10 files in other folders)
