enable_testing()
find_package(GTest CONFIG REQUIRED)
find_package(Boost REQUIRED COMPONENTS process)

add_executable(tests test_main.cpp)
target_link_libraries(tests PRIVATE GTest::gtest)
target_link_libraries(tests PRIVATE Boost::process)

file(GLOB_RECURSE TEST_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
list(REMOVE_ITEM TEST_FILES "${CMAKE_CURRENT_LIST_DIR}/test_main.cpp")
list(REMOVE_ITEM TEST_FILES "${CMAKE_CURRENT_LIST_DIR}/ProcessFiddlerLog.cpp")
list(REMOVE_ITEM TEST_FILES "${CMAKE_CURRENT_LIST_DIR}/TestDeduplicator.cpp")

target_sources(tests PRIVATE ${TEST_FILES})
add_dependencies(tests pragmabackend)
target_include_directories(tests PUBLIC Model)
target_include_directories(tests PUBLIC "${CMAKE_SOURCE_DIR}/Packets/Model")
target_include_directories(tests PUBLIC "${CMAKE_SOURCE_DIR}/Persistence/Model")
target_compile_definitions(tests PRIVATE SERVER_RUN_DIR="${CMAKE_BINARY_DIR}")
if(WIN32)
    target_compile_definitions(tests PRIVATE SERVER_FILE_PATH="../pragmabackend.exe")
else ()
    target_compile_definitions(tests PRIVATE SERVER_FILE_PATH="../pragmabackend")
endif ()
target_include_directories(tests PUBLIC "${CMAKE_SOURCE_DIR}/Packets/Model")
target_include_directories(tests PUBLIC "${CMAKE_SOURCE_DIR}/Persistence/Model")

find_package(Poco REQUIRED COMPONENTS Util)
target_link_libraries(tests PRIVATE Poco::Util)

add_executable(ProcessFiddlerLog ProcessFiddlerLog.cpp)
add_dependencies(ProcessFiddlerLog tests)
find_package(nlohmann_json CONFIG REQUIRED)
target_link_libraries(ProcessFiddlerLog PUBLIC nlohmann_json::nlohmann_json)

add_executable(TestDeduplicator TestDeduplicator.cpp)
add_dependencies(TestDeduplicator tests)
find_package(nlohmann_json CONFIG REQUIRED)
target_link_libraries(TestDeduplicator PUBLIC nlohmann_json::nlohmann_json)
target_include_directories(TestDeduplicator PUBLIC "${CMAKE_SOURCE_DIR}/Packets/Model")
target_include_directories(TestDeduplicator PUBLIC "${CMAKE_SOURCE_DIR}/Persistence/Model")

include(GoogleTest)
gtest_discover_tests(tests)